TaskGenerator-master/src/antlr4/formula/ExpressionFormulaParser.java
// Generated from ExpressionFormula.g4 by ANTLR 4.4

package formula;
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExpressionFormulaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, EXPR=2, IF=3, THEN=4, ELSE=5, LPAREN=6, RPAREN=7, COMMA=8, WHILE=9, 
		IDENT=10;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "'expr'", "'if'", "'then'", "'else'", "'('", "')'", 
		"','", "'while'", "IDENT"
	};
	public static final int
		RULE_formula = 0, RULE_segmentSequence = 1, RULE_segment = 2, RULE_expression = 3, 
		RULE_leftSide = 4, RULE_rightSide = 5, RULE_logicalFunction = 6, RULE_argList = 7, 
		RULE_arg = 8, RULE_whileSegment = 9, RULE_ifSegment = 10, RULE_leftVar = 11, 
		RULE_rightVar = 12, RULE_variable = 13;
	public static final String[] ruleNames = {
		"formula", "segmentSequence", "segment", "expression", "leftSide", "rightSide", 
		"logicalFunction", "argList", "arg", "whileSegment", "ifSegment", "leftVar", 
		"rightVar", "variable"
	};

	@Override
	public String getGrammarFileName() { return "ExpressionFormula.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExpressionFormulaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FormulaContext extends ParserRuleContext {
		public boolean valid;
		public SegmentSequenceContext s;
		public SegmentSequenceContext segmentSequence() {
			return getRuleContext(SegmentSequenceContext.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitFormula(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28); ((FormulaContext)_localctx).s = segmentSequence();
			 ((FormulaContext)_localctx).valid =  ((FormulaContext)_localctx).s.valid;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentSequenceContext extends ParserRuleContext {
		public boolean valid;
		public SegmentContext s1;
		public SegmentContext s2;
		public SegmentContext segment(int i) {
			return getRuleContext(SegmentContext.class,i);
		}
		public List<SegmentContext> segment() {
			return getRuleContexts(SegmentContext.class);
		}
		public SegmentSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segmentSequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterSegmentSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitSegmentSequence(this);
		}
	}

	public final SegmentSequenceContext segmentSequence() throws RecognitionException {
		SegmentSequenceContext _localctx = new SegmentSequenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_segmentSequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((SegmentSequenceContext)_localctx).valid =  true;
			setState(32); ((SegmentSequenceContext)_localctx).s1 = segment();
			 if(!(((SegmentSequenceContext)_localctx).s1.valid)) ((SegmentSequenceContext)_localctx).valid = false; 
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EXPR) | (1L << IF) | (1L << WHILE))) != 0)) {
				{
				{
				setState(34); ((SegmentSequenceContext)_localctx).s2 = segment();
				 if(!(((SegmentSequenceContext)_localctx).s2.valid)) ((SegmentSequenceContext)_localctx).valid = false; 
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentContext extends ParserRuleContext {
		public boolean valid;
		public WhileSegmentContext w;
		public ExpressionContext e;
		public IfSegmentContext ifSeg;
		public IfSegmentContext ifSegment() {
			return getRuleContext(IfSegmentContext.class,0);
		}
		public WhileSegmentContext whileSegment() {
			return getRuleContext(WhileSegmentContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterSegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitSegment(this);
		}
	}

	public final SegmentContext segment() throws RecognitionException {
		SegmentContext _localctx = new SegmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_segment);
		try {
			setState(51);
			switch (_input.LA(1)) {
			case WHILE:
				enterOuterAlt(_localctx, 1);
				{
				setState(42); ((SegmentContext)_localctx).w = whileSegment();
				 ((SegmentContext)_localctx).valid =  ((SegmentContext)_localctx).w.valid;
				}
				break;
			case EXPR:
				enterOuterAlt(_localctx, 2);
				{
				setState(45); ((SegmentContext)_localctx).e = expression();
				 ((SegmentContext)_localctx).valid =  ((SegmentContext)_localctx).e.valid;
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(48); ((SegmentContext)_localctx).ifSeg = ifSegment();
				 ((SegmentContext)_localctx).valid =  ((SegmentContext)_localctx).ifSeg.valid;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public boolean valid;
		public RightSideContext rs;
		public TerminalNode LPAREN() { return getToken(ExpressionFormulaParser.LPAREN, 0); }
		public TerminalNode COMMA() { return getToken(ExpressionFormulaParser.COMMA, 0); }
		public RightSideContext rightSide() {
			return getRuleContext(RightSideContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ExpressionFormulaParser.RPAREN, 0); }
		public TerminalNode EXPR() { return getToken(ExpressionFormulaParser.EXPR, 0); }
		public LeftSideContext leftSide() {
			return getRuleContext(LeftSideContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); match(EXPR);
			setState(54); match(LPAREN);
			setState(55); leftSide();
			setState(56); match(COMMA);
			setState(57); ((ExpressionContext)_localctx).rs = rightSide();
			 ((ExpressionContext)_localctx).valid =  ((ExpressionContext)_localctx).rs.valid;
			setState(59); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeftSideContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public LeftSideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftSide; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterLeftSide(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitLeftSide(this);
		}
	}

	public final LeftSideContext leftSide() throws RecognitionException {
		LeftSideContext _localctx = new LeftSideContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_leftSide);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); variable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightSideContext extends ParserRuleContext {
		public boolean valid;
		public boolean func;
		public VariableContext v;
		public ArgListContext al;
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(ExpressionFormulaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ExpressionFormulaParser.RPAREN, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public RightSideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightSide; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterRightSide(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitRightSide(this);
		}
	}

	public final RightSideContext rightSide() throws RecognitionException {
		RightSideContext _localctx = new RightSideContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rightSide);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((RightSideContext)_localctx).func = false;
			setState(64); ((RightSideContext)_localctx).v = variable();
			setState(70);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(65); match(LPAREN);
				setState(66); ((RightSideContext)_localctx).al = argList();
				((RightSideContext)_localctx).func = true;
				setState(68); match(RPAREN);
				}
			}


			        
			        if(_localctx.func){
			            if(!(((RightSideContext)_localctx).al.valid)) ((RightSideContext)_localctx).valid = false;
			            else
			            switch((((RightSideContext)_localctx).v!=null?_input.getText(((RightSideContext)_localctx).v.start,((RightSideContext)_localctx).v.stop):null)){
			                case "add":
			                case "sub":
			                case "mul":
			                case "divI":
			                case "and":
			                case "or":
			                case "mod":
			                case "not":
			                case "divF":
			                case "index":
			                    ((RightSideContext)_localctx).valid = true;
			                    break;
			                default: ((RightSideContext)_localctx).valid =  false; break;
			            }
			        }else {((RightSideContext)_localctx).valid =  true;}
			        
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalFunctionContext extends ParserRuleContext {
		public boolean valid;
		public boolean func;
		public VariableContext v;
		public ArgListContext al;
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(ExpressionFormulaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ExpressionFormulaParser.RPAREN, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public LogicalFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterLogicalFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitLogicalFunction(this);
		}
	}

	public final LogicalFunctionContext logicalFunction() throws RecognitionException {
		LogicalFunctionContext _localctx = new LogicalFunctionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_logicalFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((LogicalFunctionContext)_localctx).func = false;
			setState(75); ((LogicalFunctionContext)_localctx).v = variable();
			setState(81);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(76); match(LPAREN);
				setState(77); ((LogicalFunctionContext)_localctx).al = argList();
				((LogicalFunctionContext)_localctx).func = true;
				setState(79); match(RPAREN);
				}
			}


			        
			        if(_localctx.func){
			            if(!(((LogicalFunctionContext)_localctx).al.valid)) ((LogicalFunctionContext)_localctx).valid = false;
			            else
			            switch((((LogicalFunctionContext)_localctx).v!=null?_input.getText(((LogicalFunctionContext)_localctx).v.start,((LogicalFunctionContext)_localctx).v.stop):null)){
			                case "gt":
			                case "gte":
			                case "lt":
			                case "lte":
			                case "neq":
			                case "eq":
			                    ((LogicalFunctionContext)_localctx).valid = true;
			                    break;
			                default: ((LogicalFunctionContext)_localctx).valid =  false; break;
			            }
			        }else {((LogicalFunctionContext)_localctx).valid =  true;}
			        
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgListContext extends ParserRuleContext {
		public boolean valid;
		public ArgContext a;
		public ArgContext a1;
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExpressionFormulaParser.COMMA); }
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(ExpressionFormulaParser.COMMA, i);
		}
		public ArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterArgList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitArgList(this);
		}
	}

	public final ArgListContext argList() throws RecognitionException {
		ArgListContext _localctx = new ArgListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_argList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ArgListContext)_localctx).valid =  true;
			setState(86); ((ArgListContext)_localctx).a = arg();
			 if(!(((ArgListContext)_localctx).a.valid))((ArgListContext)_localctx).valid = false;
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(88); match(COMMA);
				setState(89); ((ArgListContext)_localctx).a1 = arg();
				 if(!(((ArgListContext)_localctx).a1.valid))((ArgListContext)_localctx).valid = false;
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public boolean valid;
		public RightSideContext rs;
		public RightSideContext rightSide() {
			return getRuleContext(RightSideContext.class,0);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitArg(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); ((ArgContext)_localctx).rs = rightSide();
			((ArgContext)_localctx).valid = ((ArgContext)_localctx).rs.valid;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileSegmentContext extends ParserRuleContext {
		public boolean valid;
		public SegmentSequenceContext s;
		public LeftVarContext leftVar() {
			return getRuleContext(LeftVarContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(ExpressionFormulaParser.LPAREN, 0); }
		public RightVarContext rightVar() {
			return getRuleContext(RightVarContext.class,0);
		}
		public SegmentSequenceContext segmentSequence() {
			return getRuleContext(SegmentSequenceContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExpressionFormulaParser.COMMA); }
		public TerminalNode RPAREN() { return getToken(ExpressionFormulaParser.RPAREN, 0); }
		public TerminalNode WHILE() { return getToken(ExpressionFormulaParser.WHILE, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(ExpressionFormulaParser.COMMA, i);
		}
		public WhileSegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileSegment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterWhileSegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitWhileSegment(this);
		}
	}

	public final WhileSegmentContext whileSegment() throws RecognitionException {
		WhileSegmentContext _localctx = new WhileSegmentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_whileSegment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((WhileSegmentContext)_localctx).valid =  true;
			setState(101); match(WHILE);
			setState(102); match(LPAREN);
			setState(103); leftVar();
			setState(104); match(COMMA);
			setState(105); rightVar();
			setState(110);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(106); match(COMMA);
				setState(107); ((WhileSegmentContext)_localctx).s = segmentSequence();
				 ((WhileSegmentContext)_localctx).valid = ((WhileSegmentContext)_localctx).s.valid;
				}
			}

			setState(112); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfSegmentContext extends ParserRuleContext {
		public boolean valid;
		public LogicalFunctionContext cond;
		public SegmentSequenceContext seq;
		public SegmentSequenceContext seq1;
		public TerminalNode ELSE() { return getToken(ExpressionFormulaParser.ELSE, 0); }
		public TerminalNode IF() { return getToken(ExpressionFormulaParser.IF, 0); }
		public TerminalNode RPAREN(int i) {
			return getToken(ExpressionFormulaParser.RPAREN, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(ExpressionFormulaParser.LPAREN); }
		public List<SegmentSequenceContext> segmentSequence() {
			return getRuleContexts(SegmentSequenceContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExpressionFormulaParser.COMMA); }
		public TerminalNode THEN() { return getToken(ExpressionFormulaParser.THEN, 0); }
		public SegmentSequenceContext segmentSequence(int i) {
			return getRuleContext(SegmentSequenceContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(ExpressionFormulaParser.RPAREN); }
		public LogicalFunctionContext logicalFunction() {
			return getRuleContext(LogicalFunctionContext.class,0);
		}
		public TerminalNode LPAREN(int i) {
			return getToken(ExpressionFormulaParser.LPAREN, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(ExpressionFormulaParser.COMMA, i);
		}
		public IfSegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifSegment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterIfSegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitIfSegment(this);
		}
	}

	public final IfSegmentContext ifSegment() throws RecognitionException {
		IfSegmentContext _localctx = new IfSegmentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ifSegment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((IfSegmentContext)_localctx).valid =  true;
			setState(115); match(IF);
			setState(116); match(LPAREN);
			setState(117); ((IfSegmentContext)_localctx).cond = logicalFunction();
			 ((IfSegmentContext)_localctx).valid =  _localctx.valid && ((IfSegmentContext)_localctx).cond.valid;
			setState(119); match(COMMA);
			setState(120); match(THEN);
			setState(121); match(LPAREN);
			setState(125);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EXPR) | (1L << IF) | (1L << WHILE))) != 0)) {
				{
				setState(122); ((IfSegmentContext)_localctx).seq = segmentSequence();
				 ((IfSegmentContext)_localctx).valid =  _localctx.valid && ((IfSegmentContext)_localctx).seq.valid;
				}
			}

			setState(127); match(RPAREN);
			setState(135);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(128); match(COMMA);
				setState(129); match(ELSE);
				setState(130); match(LPAREN);
				setState(131); ((IfSegmentContext)_localctx).seq1 = segmentSequence();
				 ((IfSegmentContext)_localctx).valid =  _localctx.valid && ((IfSegmentContext)_localctx).seq1.valid;
				setState(133); match(RPAREN);
				}
			}

			setState(137); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeftVarContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public LeftVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterLeftVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitLeftVar(this);
		}
	}

	public final LeftVarContext leftVar() throws RecognitionException {
		LeftVarContext _localctx = new LeftVarContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_leftVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); variable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightVarContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public RightVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterRightVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitRightVar(this);
		}
	}

	public final RightVarContext rightVar() throws RecognitionException {
		RightVarContext _localctx = new RightVarContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_rightVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); variable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public String var;
		public Token i;
		public TerminalNode IDENT() { return getToken(ExpressionFormulaParser.IDENT, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionFormulaListener ) ((ExpressionFormulaListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); ((VariableContext)_localctx).i = match(IDENT);

			        ((VariableContext)_localctx).var =  (((VariableContext)_localctx).i!=null?((VariableContext)_localctx).i.getText():null);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}